Fix visibility on reddit website; Updated translations

--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -87,6 +87,7 @@ body > #redeviation-bs-sidebar {
   speak: none;
   border: none;
   display: block !important;
+  visibility: visible !important;
   transform: translate3d(-$__sidebarWidth, 0, 0);
   transition: width 0s 0.3s, height 0s 0.3s, opacity 0.3s, transform 0.3s;
 
